--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,8 +1,16 @@
 
 {
-  "name": "Python Dev",
+  "name": "MOD550 Python Dev",
   "image": "mcr.microsoft.com/devcontainers/python:3.11",
-  "postCreateCommand": "python -m pip install --upgrade pip && pip install -r requirements.txt",
+
+  // Install Git LFS as a Dev Container "Feature"
+  "features": {
+    "ghcr.io/devcontainers/features/git-lfs:1": {}
+  },
+
+  // After the container is created, set up LFS and Python deps for large dataset handling
+  "postCreateCommand": "git lfs install && python -m pip install --upgrade pip && if [ -f requirements.txt ]; then pip install -r requirements.txt; fi",
+
   "customizations": {
     "vscode": {
       "extensions": [
@@ -12,4 +20,5 @@
     }
   }
 }
+
 
